@@ -162,6 +162,7 @@ cgrates (0.11.0~dev) UNRELEASED; urgency=medium
   * [ERs] Added *opts.*partial to control if the event is partial or not
   * [AttributeS] Added any_context config to control the matching attributes
   * [DispatcherS] Added any_subsyste config to control the matching dispatchers
+  * [StatS] AverageCallCost and TotalCallCost now returns error for negative Cost field
 
  -- DanB <danb@cgrates.org>  Wed, 19 Feb 2020 13:25:52 +0200
 
